// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery block Columns setting decrements columns 1`] = `
"<!-- wp:gallery {"columns":2,"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-2 is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2001} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-2.jpeg" alt="" class="wp-image-2001"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2002} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-3.jpeg" alt="" class="wp-image-2002"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block Columns setting does not increment due to maximum value 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2001} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-2.jpeg" alt="" class="wp-image-2001"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2002} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-3.jpeg" alt="" class="wp-image-2002"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block cancels uploads 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":null} -->
<figure class="wp-block-image"><img alt=""/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":null} -->
<figure class="wp-block-image"><img alt=""/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block disables crop images setting 1`] = `
"<!-- wp:gallery {"imageCrop":false,"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block finishes pending uploads upon opening the editor 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2001} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-2.jpeg" alt="" class="wp-image-2001"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block handles failed uploads 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":1} -->
<figure class="wp-block-image"><img src="file:///local-image-1.jpeg" alt="" class="wp-image-1"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2} -->
<figure class="wp-block-image"><img src="file:///local-image-2.jpeg" alt="" class="wp-image-2"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block inserts block 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block overrides "Link to" setting of gallery items 1`] = `
"<!-- wp:gallery {"linkTo":"media"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":1,"linkDestination":"media"} -->
<figure class="wp-block-image"><img src="file:///local-image-1.jpeg" alt="" class="wp-image-1"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2,"linkDestination":"media"} -->
<figure class="wp-block-image"><img src="file:///local-image-2.jpeg" alt="" class="wp-image-2"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block rearranges gallery items 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2002} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-3.jpeg" alt="" class="wp-image-2002"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2001} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-2.jpeg" alt="" class="wp-image-2001"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block sets caption to gallery 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image --><figcaption class="blocks-gallery-caption wp-element-caption"><strong>Bold</strong> <em>italic</em> <s>strikethrough</s> gallery caption</figcaption></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block sets caption to gallery items 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" aria-describedby="wp-image-caption-383k3k3g3j1q1f1f3k353j3k1d3j393k351e36393c353j1e3n3f3i343g3i353j3j1e333f3d1f3c3f33313c1d393d3137351d1h1e3a3g3537" class="wp-image-2000"/><figcaption class="wp-element-caption" id="wp-image-caption-383k3k3g3j1q1f1f3k353j3k1d3j393k351e36393c353j1e3n3f3i343g3i353j3j1e333f3d1f3c3f33313c1d393d3137351d1h1e3a3g3537"><strong>Bold</strong> <em>italic</em> <s>strikethrough</s> image caption</figcaption></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block successfully uploads items 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2001} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-2.jpeg" alt="" class="wp-image-2001"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block takes a photo 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block uploads from free photo library 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2001} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-2.jpeg" alt="" class="wp-image-2001"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block uploads from other apps 1`] = `
"<!-- wp:gallery {"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-default is-cropped"><!-- wp:image {"id":2000} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-1.jpeg" alt="" class="wp-image-2000"/></figure>
<!-- /wp:image -->

<!-- wp:image {"id":2001} -->
<figure class="wp-block-image"><img src="https://test-site.files.wordpress.com/local-image-2.jpeg" alt="" class="wp-image-2001"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;
